[tool.poetry]
name = "fdmine"
version = "0.1.0"
description = ""
authors = ["Javier Gallo <javier_rooster@yahoo.com.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
